# impl-polymorphic-records-type-inference

./: CHANGELOG.md  LICENSE  README.md  simple-records.cabal
.github/workflows/: ci.yml
app/: App.hs  Main.hs
src/: Fresh.hs  Util.hs
src/Language/: Simple.hs
src/Language/Simple/: Parser.hs  Syntax.hs  Type.hs
src/Language/Simple/Type/: Constraint.hs  Env.hs  Error.hs  Subst.hs  UniVar.hs
test/: Test.hs
test/data/: let_inner.fail  let_inner.pass  nested.pass  record_fn.pass  record_poly.fail  record_poly.pass
