cabal-version:      2.4
name:               simple-records
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         me@coord-e.com
author:             coord_e
bug-reports:        https://github.com/coord-e/simple-records/issues
synopsis:           Toy implementation of type inference with records
description:        Toy implementation of type inference with records.
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/coord-e/simple-records

library
    exposed-modules:
        Language.Simple
        Language.Simple.Parser
        Language.Simple.Syntax

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Werror -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wnoncanonical-monad-instances
        -Wno-missing-home-modules -Wunused-packages
        -Wno-error=unused-packages

    build-depends:
        base ^>=4.16.4.0,
        hashable ^>=1.4.2.0,
        attoparsec ^>=0.14.4,
        mtl ^>=2.3.1,
        parsers ^>=0.12.11,
        text ^>=2.0.1

executable simple-records
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    App
    default-language: Haskell2010
    ghc-options:
        -Wall -Werror -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wnoncanonical-monad-instances
        -Wno-missing-home-modules -Wunused-packages
        -Wno-error=unused-packages

    build-depends:
        base ^>=4.16.4.0,
        monad-logger ^>=0.3.37,
        mtl ^>=2.3.1,
        text ^>=2.0.1,
        simple-records
